--- a/data/tasks/tasks-2026-01-03.json
+++ b/data/tasks/tasks-2026-01-03.json
@@ -1,37 +1,32 @@
 [
-
-
-    {
-  "id": "2026-01-12-001",
-  "title": "2025.12월 사회보험료 납부",
-  "due": "2026-01-12",
-  "needBy": "15:00",
-  "approver": "학교장",
-  "risk": "연체료",
-  "channel": "에듀파인",
-  "memo": "엑셀 작업까지는 해둠. 학교회계는 원인행위, 세외는 수납부터 해야함. 은행 방문 필요"
-}
-
   {
-  "id": "2026-01-12-002",
-  "title": "2025.11~12월 원천세 납부",
-  "due": "2026-01-12",
-  "needBy": "15:00",
-  "approver": "학교장",
-  "risk": "연체료",
-  "channel": "에듀파인",
-  "memo": "홈택스, 위택스 신고 후 고지서 출력"
-}
-
+    "id": "2026-01-12-001",
+    "title": "2025.12월 사회보험료 납부",
+    "due": "2026-01-12",
+    "needBy": "15:00",
+    "approver": "학교장",
+    "risk": "연체료",
+    "channel": "에듀파인",
+    "memo": "엑셀 작업까지는 해둠.\n학교회계는 원인행위, 세외는 수납부터 해야함.\n은행 방문 필요"
+  },
   {
-  "id": "2026-01-12-003",
-  "title": "물품 결산 및 사용계획 보고 (기한 넘김)",
-  "due": "2026-01-09",
-  "needBy": "16:40",
-  "approver": "학교장",
-  "risk": "",
-  "channel": "에듀파인",
-  "memo": "기한 넘겼음"
-}
-
+    "id": "2026-01-12-002",
+    "title": "2025.11~12월 원천세 납부",
+    "due": "2026-01-12",
+    "needBy": "15:00",
+    "approver": "학교장",
+    "risk": "연체료",
+    "channel": "에듀파인",
+    "memo": "홈택스, 위택스 신고 후 고지서 출력"
+  },
+  {
+    "id": "2026-01-12-003",
+    "title": "물품 결산 및 사용계획 보고 (기한 넘김)",
+    "due": "2026-01-09",
+    "needBy": "16:40",
+    "approver": "학교장",
+    "risk": "",
+    "channel": "에듀파인",
+    "memo": "기한 넘겼음"
+  }
 ]
