--- a/data/tasks/tasks-2026-01-03.json
+++ b/data/tasks/tasks-2026-01-03.json
@@ -1,26 +1,6 @@
 [
-  {
-    "id": "2026-01-12-001",
-    "title": "2025.12월 사회보험료 납부",
-    "due": "2026-01-12",
-    "needBy": "15:00",
-    "approver": "학교장",
-    "risk": "연체료",
-    "channel": "에듀파인",
-    "memo": "엑셀 작업까지는 해둠.\n학교회계는 원인행위, 세외는 수납부터 해야함.\n은행 방문 필요"
-  },
-  {
-    "id": "2026-01-12-002",
-    "title": "2025.11~12월 원천세 납부",
-    "due": "2026-01-12",
-    "needBy": "15:00",
-    "approver": "학교장",
-    "risk": "연체료",
-    "channel": "에듀파인",
-    "memo": "홈택스, 위택스 신고 후 고지서 출력"
-  },
-  {
-    "id": "2026-01-12-003",
+    {
+    "id": "2026-01-09-001",
     "title": "물품 결산 및 사용계획 보고 (기한 넘김)",
     "due": "2026-01-09",
     "needBy": "16:40",
@@ -28,5 +8,93 @@
     "risk": "",
     "channel": "에듀파인",
     "memo": "기한 넘겼음"
+  },
+
+  {
+    "id": "2026-01-12-001",
+    "title": "2025.12월 사회보험료 납부",
+    "due": "2026-01-12",
+    "needBy": "15:00",
+    "approver": "학교장",
+    "risk": "납부 지연 연체료 발생",
+    "channel": "에듀파인",
+    "memo": "엑셀 작업까지는 해둠. \n학교회계는 원인행위, 세외는 수납부터 해야함. \n은행 방문 필요"
+  },
+
+  {
+    "id": "2026-01-12-002",
+    "title": "2025.11~12월 원천세 납부",
+    "due": "2026-01-12",
+    "needBy": "15:00",
+    "approver": "학교장",
+    "risk": "지방소득세 가산세 발생",
+    "channel": "에듀파인",
+    "memo": "홈택스, 위택스 신고 후 고지서 출력, 은행 방문"
+  },
+
+    {
+    "id": "2026-01-13-001",
+    "title": "온라인 교육 신청 (교육공무직 보수관리)",
+    "due": "2026-01-13",
+    "needBy": "10:00",
+    "approver": "행정실장",
+    "risk": "선착순",
+    "channel": "나이스 상시학습에서 신청",
+    "memo": "행정연수부-38(2026.1.8.), 신청시 복직 일자 입력"
+  },
+
+    {
+    "id": "2026-01-13-001",
+    "title": "기록물 관리 책임자 지정 현황 제출",
+    "due": "2026-01-09",
+    "needBy": "",
+    "approver": "전결 가능",
+    "risk": "",
+    "channel": "에듀파인 공문 제출",
+    "memo": "행정과-480(2026.1.5.), 내부결재 후 관련 번호 기재 후 공문 제출"
+  },
+
+    {
+    "id": "2026-01-14-001",
+    "title": "2026.3.1.일자 교육공무직 전보 서류 취합",
+    "due": "2026-01-14",
+    "needBy": "4:40",
+    "approver": "학교장",
+    "risk": "",
+    "channel": "공문 발송 및 서류 인편 제출",
+    "memo": "인사 기록 맞게 적은 건지, 학교장 사인 및 직인 찍혔는지 등 서류 검토 후 실장님께 최종 검토 요청 "
+  },
+
+    {
+    "id": "2026-01-14-002",
+    "title": "정보공개 청구 내용 제출 (폐교 교가 자료)",
+    "due": "2026-01-14",
+    "needBy": "4:40",
+    "approver": "전결 가능?",
+    "risk": "",
+    "channel": "",
+    "memo": "행정과-1058(2026.1.7.), 행정과에 공문 제출, 교무실에 먼저 물어보고 서고 확인"
+  },
+
+    {
+    "id": "2026-01-20-001",
+    "title": "2026.1~2월 교육공무직 산재보험료 소요액 신청",
+    "due": "2026-01-22",
+    "needBy": "4:40",
+    "approver": "전결 가능",
+    "risk": "",
+    "channel": "에듀파인 공문 제출",
+    "memo": "행정과-932(2026.1.7.), 고용산재 토탈에서 학교별 확정 산재보험 요율 확인 후 신청"
+  },
+
+    {
+    "id": "2026-01-21-001",
+    "title": "2025년 교육공무직 기타 과세수당 지급현황 제출",
+    "due": "2026-01-21",
+    "needBy": "4:40",
+    "approver": "전결 가능",
+    "risk": "",
+    "channel": "공문 제출",
+    "memo": "행정과-1246(2026.1.8.), \n전출교에 지급 내역 송부, \n시간외 근무 수당, 방학중 근무 수당, 학교지급 연차 미사용 수당 등"
   }
 ]
